--- a/Objects/AFC.build_log.htm
+++ b/Objects/AFC.build_log.htm
@@ -18,7 +18,7 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.66.0.0 
 <h2>Project:</h2>
-D:\Things\µ¥Æ¬»ú\Projects\ApeFanController_STC15F104W\AFC.uvproj
+D:\Things\MCU\Projects\ApeFanController_STC15F104W\AFC.uvproj
 Project File Date:  05/23/2019
 
 <h2>Output:</h2>
@@ -28,10 +28,10 @@ compiling main.c...
 compiling delay.c...
 compiling timer.c...
 linking...
-Program Size: data=35.5 xdata=0 code=901
+Program Size: data=35.5 xdata=0 code=857
 creating hex file from ".\Objects\AFC"...
 ".\Objects\AFC" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:02
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
